crates/java-syntax/tests/snapshots/lexer_snapshots__lex_string_template_nested_string.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"Outer \{ "Inner \{x}" }"
TOKENS:
STRING_TEMPLATE_BEGIN "\"Outer \\{"
WHITESPACE " "
STRING_TEMPLATE_BEGIN "\"Inner \\{"
IDENTIFIER "x"
STRING_TEMPLATE_END "}\""
WHITESPACE " "
STRING_TEMPLATE_END "}\""
EOF ""

LEX_ERRORS:
<none>
