crates/java-syntax/tests/snapshots/lexer_snapshots__lex_string_template_str_prefix.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
STR."Hello \{name}!"
TOKENS:
IDENTIFIER "STR"
DOT "."
STRING_TEMPLATE_BEGIN "\"Hello \\{"
IDENTIFIER "name"
STRING_TEMPLATE_END "}!\""

LEX_ERRORS:
<none>
