crates/java-syntax/tests/snapshots/lexer_snapshots__lex_text_blocks.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"""
Hello
  World
"""

TOKENS:
TEXT_BLOCK "\"\"\"\nHello\n  World\n\"\"\""
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>
