crates/java-syntax/tests/snapshots/lexer_snapshots__lex_underscope.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
String _;

TOKENS:
IDENTIFIER "String"
WHITESPACE " "
UNDERSCORE "_"
SEMICOLON ";"
WHITESPACE "\n"

LEX_ERRORS:
<none>
