crates/java-syntax/tests/snapshots/lexer_snapshots__lex_unicode_char_bmp.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
'你'
TOKENS:
CHAR_LITERAL "'你'"
EOF ""

LEX_ERRORS:
<none>
