crates/java-syntax/tests/snapshots/lexer_snapshots__lex_unicode_escape_identifier.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
int my\u005Fvar = 1;
TOKENS:
INT_KW "int"
WHITESPACE " "
IDENTIFIER "my\\u005Fvar"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"

LEX_ERRORS:
<none>
