crates/java-syntax/tests/snapshots/lexer_snapshots__lex_unicode_escape_keyword.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
\u0070ublic class Test {}
TOKENS:
PUBLIC_KW "\\u0070ublic"
WHITESPACE " "
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>
